kubernetes-infra/app/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 838107339577.dkr.ecr.ap-south-1.amazonaws.com/w-k-s/services-marketplace/api-gateway:470
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
