kubernetes-infra/app/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: customer-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: 838107339577.dkr.ecr.ap-south-1.amazonaws.com/w-k-s/services-marketplace/customer-service:37b0549e29fee3ef3eb0a1d7b334e1e80f34f95b
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
