kubernetes-infra/app/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: order-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 838107339577.dkr.ecr.ap-south-1.amazonaws.com/w-k-s/services-marketplace/order-service:494
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8083
  type: ClusterIP
