kubernetes-infra/app/service-provider-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: service-provider-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: service-provider-service
  template:
    metadata:
      labels:
        app: service-provider-service
    spec:
      containers:
        - name: service-provider-service
          image: 838107339577.dkr.ecr.ap-south-1.amazonaws.com/w-k-s/services-marketplace/service-provider-service:8a615f5c196e33ec729bd877c1c9013ce1ba21af
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          livenessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: service-provider-service
spec:
  selector:
    app: service-provider-service
  ports:
    - port: 80
      targetPort: 8084
  type: ClusterIP
