kubernetes-infra/app/fusionauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: fusionauth
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      containers:
        - name: fusionauth
          image: fusionauth/fusionauth-app:1.24.0
          ports:
            - containerPort: 9011
          # This f***ing doesn't work
          # Readiness probe failed: Get http://172.31.56.94:9011/api/status: net/http: request canceled (Client.Timeout exceeded while awaiting headers)
          # livenessProbe:
          #   httpGet:
          #     path: /api/status
          #     port: 9011
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
          # readinessProbe:
          #   httpGet:
          #     path: /api/status
          #     port: 9011
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: fusionauth
spec:
  selector:
    app: fusionauth
  ports:
    - port: 80
      targetPort: 9011
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fusionauth-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/healthcheck-path: /api/status
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: fusionauth.servicesmarketplace.w-k-s.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: fusionauth
              servicePort: 80
